@@ -34,6 +34,7 @@ Version 7.0.1
     Please use the Digest-Class as replacement.
   - added ID3Tag::PictureType
   - fixed bug in Drawable::blendPixel
+  - added compare operators to class grafix::Point
 
 Version 7.0.0 vom 29.07.2018 (Repo-Tag: REL_7_0_0)
   - Complete Rewrite, based on Version 6.4.7
